force-app/main/default/objects/Scale_Utility_Overage__c/Scale_Utility_Overage__c.object-meta.xml
<CustomObject>
    <description>SOX object - Stores aggregated snowflake feed details such as total usage, committed usage extra usage etc.</description>
    <label>Scale Utility Overage</label>
    <nameField>
        <label>SU Overage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scale Utility Overages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>