force-app/main/default/objects/Scale_Utility_Overage__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scale Utility Overages</relationshipLabel>
    <relationshipName>Scale_Utility_Overages</relationshipName>
    <type>Lookup</type>
</CustomField>