force-app/main/default/objects/Scale_Utility_Overage__c/fields/Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Type__c</fullName>
    <description>Check if the license order item belongs to M365H or not</description>
    <formula>IF(INCLUDES(License_Order_Product__r.Product2.Bundle_Features__c, &apos;M365H&apos;) , &apos;M365H&apos;, &apos;Non-M365&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Type</label>
    <type>Text</type>
</CustomField>