force-app/main/default/objects/Scale_Utility_Overage__c/fields/Disti_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Disti_Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disti Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scale Utility Overages (Disti Account)</relationshipLabel>
    <relationshipName>Scale_Utility_Overages1</relationshipName>
    <type>Lookup</type>
</CustomField>