force-app/main/default/objects/Scale_Utility_Overage__c/fields/Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Id__c</fullName>
    <label>Entitlement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>