force-app/main/default/objects/Scale_Utility_Overage__c/fields/Global_Commit_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Commit_ID__c</fullName>
    <label>Global Commit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>