force-app/main/default/objects/Scale_Utility_Overage__c/fields/Is_First_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Item?</label>
    <type>Checkbox</type>
</CustomField>