force-app/main/default/objects/Scale_Utility_Overage__c/fields/License_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>License_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Scale Utility Overages</relationshipLabel>
    <relationshipName>Scale_Utility_Overages</relationshipName>
    <type>Lookup</type>
</CustomField>