force-app/main/default/objects/Scale_Utility_Overage__c/fields/On_Demand_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Period_End_Date__c</fullName>
    <label>On Demand Period End Date</label>
    <type>Date</type>
</CustomField>