force-app/main/default/objects/Scale_Utility_Overage__c/fields/OnDemand_AR_CLI_ID__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_AR_CLI_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnDemand-AR CLI</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Scale Utility Overages</relationshipLabel>
    <relationshipName>Scale_Utility_Overages</relationshipName>
    <type>Lookup</type>
</CustomField>