force-app/main/default/objects/Scale_Utility_Overage__c/fields/Ondemand_CLI__c.field-meta.xml
<CustomField>
    <fullName>Ondemand_CLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ondemand CLI</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Scale Utility Overages (Ondemand CLI)</relationshipLabel>
    <relationshipName>Scale_Utility_Overages2</relationshipName>
    <type>Lookup</type>
</CustomField>