force-app/main/default/objects/Scale_Utility_Overage__c/fields/OnDemand_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnDemand Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Scale Utility Overages (OnDemand Order Product)</relationshipLabel>
    <relationshipName>Scale_Utility_Overages_ondemand</relationshipName>
    <type>Lookup</type>
</CustomField>