force-app/main/default/objects/Scale_Utility_Overage__c/fields/OnDemand_SR_CLI_ID__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_SR_CLI_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnDemand-SR CLI</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Scale Utility Overages (OnDemand-SR CLI)</relationshipLabel>
    <relationshipName>Scale_Utility_Overages1</relationshipName>
    <type>Lookup</type>
</CustomField>