force-app/main/default/objects/Scale_Utility_Overage__c/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Scale Utility Overages (Original Order)</relationshipLabel>
    <relationshipName>Scale_Utility_Overages_Original</relationshipName>
    <type>Lookup</type>
</CustomField>