force-app/main/default/objects/Scale_Utility_Overage__c/fields/Overage_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Overage_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overage Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scale Utility Overages</relationshipLabel>
    <relationshipName>Scale_Utility_Overages</relationshipName>
    <type>Lookup</type>
</CustomField>