force-app/main/default/objects/Scale_Utility_Overage__c/fields/Overage_Order__c.field-meta.xml
<CustomField>
    <fullName>Overage_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overage Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Scale Utility Overages (Overages)</relationshipLabel>
    <relationshipName>Scale_Utility_Overages</relationshipName>
    <type>Lookup</type>
</CustomField>