force-app/main/default/objects/Scale_Utility_Overage__c/fields/Process_Flag__c.field-meta.xml
<CustomField>
    <fullName>Process_Flag__c</fullName>
    <label>Process Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not Process</fullName>
            </value>
            <value>
                <fullName>Create Overage Order</fullName>
            </value>
            <value>
                <fullName>Reprocess</fullName>
            </value>
            <value>
                <fullName>Order Created</fullName>
            </value>
            <value>
                <fullName>Stale</fullName>
            </value>
            <value>
                <fullName>Late Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>