force-app/main/default/objects/Scale_Utility_Overage__c/fields/Reserve_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserve Order Line</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Scale Utility Overages (Reserve Order Line)</relationshipLabel>
    <relationshipName>Scale_Utility_Overages2</relationshipName>
    <type>Lookup</type>
</CustomField>