force-app/main/default/objects/Scale_Utility_Overage__c/fields/Snowflake_Feed_Id__c.field-meta.xml
<CustomField>
    <fullName>Snowflake_Feed_Id__c</fullName>
    <label>Snowflake Feed Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>