force-app/main/default/objects/Scale_Utility_Overage__c/fields/Usage_in_TB__c.field-meta.xml
<CustomField>
    <fullName>Usage_in_TB__c</fullName>
    <label>Usage (in TB or No of Users)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>