force-app/main/default/objects/Scale_Utility_Overage__c/validationRules/Scale_Utility_Overage_Access_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Scale_Utility_Overage_Access_Restriction</fullName>
    <active>true</active>
    <description>Order Fulfilment related records are not to edit</description>
    <errorConditionFormula>AND(
NOT($Permission.Scale_Utility_Overage_ProdOps_Edit_Access),
NOT(ISNEW()),
$User.Alias &lt;&gt; &apos;autoproc&apos;,
NOT(INCLUDES($User.RBAC_Group__c, &apos;API&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT System Admin&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT Prod Ops Support&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;System - IT&apos;)),
ISPICKVAL(Overage_Opportunity__r.StageName, &apos;7 Closed Won&apos;)
)</errorConditionFormula>
    <errorMessage>You aren’t authorized to edit Scale Utility Overage, hence please create a support ticket with ProdOps Support or email ProdOpsapps@rubrik.com” with details</errorMessage>
</ValidationRule>