force-app/main/default/objects/Scale_Utility_Overage__c/validationRules/SUO001_Late_Request_Can_Not_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>SUO001_Late_Request_Can_Not_Be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Process_Flag__c, &apos;Late Request&apos;)),
  ISPICKVAL(PRIORVALUE(Process_Flag__c), &apos;Late Request&apos;)
)</errorConditionFormula>
    <errorDisplayField>Process_Flag__c</errorDisplayField>
    <errorMessage>Late requests are not allowed to be updated
(Error Code: Validation Rule SUO001)</errorMessage>
</ValidationRule>