force-app/main/default/objects/Scale_Utility_Overage__c/validationRules/SUO002_M365_Overage_Reprocess_NotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>SUO002_M365_Overage_Reprocess_NotAllowed</fullName>
    <active>true</active>
    <description>Reprocessing is not allowed Overage header with M365</description>
    <errorConditionFormula>AND( ISPICKVAL(Process_Flag__c , &apos;Reprocess&apos;) , Bundle_Type__c = &quot;M365H&quot;)</errorConditionFormula>
    <errorMessage>Reprocessing is not allowed on the M365 Scale Utility Overage. Please update the related M365 Snowflake Feed and changes will be reflected on the header and line.</errorMessage>
</ValidationRule>