force-app/main/default/objects/Scale_Utility_Overage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Original_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>